2005-01-08  Martin Blom  <martin@blom.org>

	* ahi.device: Tweaked the default "dizzy" tags for BestAudioID()
	to award the user's preferred audio mode. [Fab]

2004-11-08  Martin Blom  <martin@blom.org>

 	* Released AHI-Handler 5.5.

	* AHI-Handler: Fixed bad IFF chunk lengths for AIFF/AIFC
	files. [Patch from Stefan Haubenthal]

2004-11-03  Martin Blom  <martin@blom.org>

 	* Released AHI-Handler 5.4.

	* AHI-Handler: Fixed bad struct alignment for non-m68k
	builds. [Stefan Haubenthal]

	* Released ahi.device 5.53.

	* ahi.device: 16 bit samples were broken in 7.1 mode. [Marcin
	'Morgoth' Kurek]

2004-11-02  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.52.

	* ahi.device: DSP echo and master volume did not work in 7.1
	mode. Fixed now.

	* Updated copyright year and removed almost all CVS/RCS tags from
	the source code.

2004-11-01  Martin Blom  <martin@blom.org>

	* Released AddAudioModes 5.6.

	* Applied a couple of patches from Gunther Nikl. Thanks Gunther!

2004-10-31  Martin Blom  <martin@blom.org>

	* Released AHI 5.14.

	* Imported the rest of the AROS modifications from AROS
	CVS. Mostly Makefile mods.

	* Released emu10kx.audio 5.22.

	* emu10kx.audio: Reduced the volume boost by 6 dB. According to my
	voltmeter, the driver now outputs around 2 Vpp when the master
	volume is set to 0 dB and around 8 Vpp when the master volume is
	+12 dB. If you have a real oscilloscope, I'd be happy to hear your
	verification.

	* emu10kx.audio: Merged the AROS port by Georg Steger. Thanks
	Georg!

2004-10-29  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.21.
	
	* emu10kx.audio: Made the +12 dB boost work on Audigy too. [Marcin
	'Morgoth' Kurek]

2004-10-28  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.20.

	* emu10kx.audio: Added front channel downmix to center and LFE
	when playing mono or stereo sounds (-3 dB), just like the driver
	used to do for Audigy cards before. This is disabled in